Commiting a half-completed swagger definition, and added a mock handler for /member route
